Proyect to test with Selenium, Cucumber, Java, TestNG, JUnit for parallel testing new